<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".EditorActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <!-- Label -->
            <TextView
                style="@style/CategoryStyle"
                android:text="@string/category_overview" />

            <!-- Input fields -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical"
                android:paddingLeft="4dp">

                <!-- Name field -->
                <EditText
                    android:id="@+id/edit_product_name"
                    style="@style/EditorFieldStyle"
                    android:hint="@string/hint_product_name"
                    android:inputType="textCapWords" />

                <EditText
                    android:id="@+id/edit_product_quantity"
                    style="@style/EditorFieldStyle"
                    android:hint="@string/hint_product_quantity"
                    android:inputType="number" />

                <LinearLayout
                    style="@style/EditorFieldStyle"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/edit_order"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/editor_add_1_item" />

                    <Button
                        android:id="@+id/edit_sell"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="@string/editor_sell_1_item" />
                </LinearLayout>

                <EditText
                    android:id="@+id/edit_product_price"
                    style="@style/EditorFieldStyle"
                    android:hint="@string/hint_product_price"
                    android:inputType="number" />

                <EditText
                    android:id="@+id/edit_product_sell_times"
                    style="@style/EditorFieldStyle"
                    android:hint="@string/hint_sell_times"
                    android:inputType="number" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            style="@style/EditorFieldStyle"
            android:orientation="horizontal">

            <Button
                android:id="@+id/edit_getImage"
                style="@style/EditorFieldStyle"
                android:layout_weight="1"
                android:text="@string/editor_get_image" />
        </LinearLayout>

        <ImageView
            android:id="@+id/edit_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/edit_product_order_more"
            style="@style/EditorFieldStyle"
            android:onClick="submitOrder"
            android:text="@string/editor_order_more" />

    </LinearLayout>
</ScrollView>
